@@ -1,5 +1,5 @@
 /*
- * $Id: wgnuplib.h,v 1.29 2009/12/31 01:21:43 sfeam Exp $
+ * $Id: wgnuplib.h,v 1.30 2010/02/16 07:15:12 mikulik Exp $
  */
 
 /* GNUPLOT - win/wgnuplib.h */
@@ -386,6 +386,7 @@ void WDPROC GraphChangeFont(LPGW lpgw, LPCSTR font, int fontsize, HDC hdc, RECT 
 unsigned int WDPROC GraphGetTextLength(LPGW lpgw, LPCSTR text, LPCSTR fontname, int fontsize);
 int WDPROC GraphGetFontScaling(LPGW lpgw, LPCSTR font, int fontsize);
 void	ReadGraphIni(LPGW lpgw);
+void WDPROC win_close_terminal_window(LPGW lpgw);
 
 #ifdef USE_MOUSE
 void WDPROC Graph_set_cursor (LPGW lpgw, int c, int x, int y );
